# data-science-1

./: .gitignore  pyproject.toml  requirements.txt
app/: predict.py
