[tool.poetry]
name = "data-science"
version = "0.1.0"
description = "\"DS API for Family Promise, Spokane\""
authors = ["Family Promise, Spokane"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
fastapi = "^0.65.2"
joblib = "^1.0.1"
plotly = "^4.14.3"
scikit-learn = "^0.24.2"
click = "^8.0.1"
python-dotenv = "^0.17.1"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
hypothesis = "^6.14.0"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
